objects/Pick_Up__c.object
<CustomObject>
    <fields>
        <fullName>Canceled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Canceled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Departs_At__c</fullName>
        <label>Departs At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Evaluation_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Evaluation</label>
        <referenceTo>Evaluation__c</referenceTo>
        <relationshipLabel>Pick Ups</relationshipLabel>
        <relationshipName>Pick_Ups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GeoLocation__c</fullName>
        <label>GeoLocation</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Time_Requested__c</fullName>
        <label>Original Time Requested</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Pick_Up_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pick Up By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Pick_Ups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Return_Payment_Details__c</fullName>
        <label>Return Payment Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Scheduled_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Scheduled By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Pick_Ups2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Scheduled_For_Date_Time__c</fullName>
        <formula>Scheduled_For__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scheduled For (Date/Time)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Scheduled_For__c</fullName>
        <label>Scheduled For</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Backflow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Return</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seller</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vehicle_Interest_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vehicle Interest</label>
        <referenceTo>Vehicle_Interest__c</referenceTo>
        <relationshipLabel>Pick Ups</relationshipLabel>
        <relationshipName>Pick_Ups</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Pick Up</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Pick Up Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pick Ups</pluralLabel>
    <recordTypes>
        <fullName>Buyer</fullName>
        <active>true</active>
        <label>Buyer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Seller</fullName>
        <active>true</active>
        <label>Seller</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>